--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,16 @@
     $color-links: #999;
     $color-dark-links: #555;
 
+
+// Breakpoints
+$breakpoint-small: 768px;
+$breakpoint-medium: 1050px;
+$breakpoint-large: 1250px;
+
 //IMPORT PARTIALS
 @import "partials/toc";
 @import "partials/typography";
 @import "partials/buttons";
+@import "partials/media";
+@import "partials/layout";
+
