--- a/css/style.css
+++ b/css/style.css
@@ -122,3 +122,26 @@ body {
     font-size: 112.5%; }
   .container {
     max-width: 1250px; } }
+
+/* GRID */
+.row .column {
+  margin-bottom: 2%; }
+
+@media (min-width: 768px) {
+  .row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+  .column {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    margin: 1%; } }
+
+.row.demo .column {
+  background: rgba(0, 0, 0, 0.5);
+  padding: 1em;
+  text-align: center; }
