--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,4 +21,4 @@ $breakpoint-large: 1250px;
 @import "partials/buttons";
 @import "partials/media";
 @import "partials/layout";
-
+@import "partials/grid";
