--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ body {
 
 /* GRID */
 .row .column {
-  margin-bottom: 2%; }
+  margin-bottom: 4%; }
 
 @media (min-width: 768px) {
   .row {
@@ -134,12 +134,24 @@ body {
     display: flex;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
-    justify-content: center; }
+    justify-content: center;
+    margin-left: -1%;
+    margin-right: -1%; }
   .column {
     -webkit-box-flex: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
-    margin: 1%; } }
+    margin: 1%; }
+  .one-half {
+    width: 48%; }
+  .one-third {
+    width: 31.3333%; }
+  .one-fourth {
+    width: 23%; }
+  .two-thirds {
+    width: 64.6666%; }
+  .three-fourths {
+    width: 73%; } }
 
 .row.demo .column {
   background: rgba(0, 0, 0, 0.5);
