--- a/scss/partials/_grid.scss
+++ b/scss/partials/_grid.scss
@@ -2,9 +2,10 @@
 
 //This is a simple semantic grid
 // 1/2 col, 1/3 col, etc.
+$gutter-width: 2%;
 
 .row .column {
-    margin-bottom: 2%;
+    margin-bottom: $gutter-width*2;
 }
 
 //flex box
@@ -12,12 +13,19 @@
     .row {
         display: flex;
         justify-content: center;
+        margin-left: -$gutter-width/2;
+        margin-right: -$gutter-width/2;
     }
     .column { 
         // color: red;
         flex-grow: 1;
-        margin: 1%;
+        margin: $gutter-width/2;
     }
+    &.one-half {width: 50%-$gutter-width;}
+    &.one-third {width: 33.3333%-$gutter-width;}
+    &.one-fourth {width: 25%-$gutter-width;}
+    &.two-thirds {width: 66.6666%-$gutter-width;}
+    &.three-fourths {width: 75%-$gutter-width;}
 }
 
 //css grid
@@ -34,7 +42,6 @@
 //     }
 //}
 
-
 // FOR DEMO ONLY
 .row.demo {
     //background: yellow;
@@ -43,6 +50,5 @@
         background: rgba(0,0,0,.5);
         padding: 1em;
         text-align: center;
-
     }
 }
