--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ a:hover {
   color: #555; }
 
 /* Horizontal Rules */
-hr {
+.hr_ {
   border: 0;
   height: 1px;
   background: rgba(0, 0, 0, 0.15);
@@ -173,7 +173,7 @@ body {
     font-size: 1.5em;
     font-family: franklin-gothic-urw, sans-serif;
     margin: .5em 0 0 0;
-    /*to adjust baseline*/ }
+    /*to adjust baseline with nav text*/ }
   .site-header a, .site-footer a {
     color: #fff;
     list-style: none;
