--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -38,7 +38,7 @@ a:hover {color: $color-dark-links;}
 
 
 /* Horizontal Rules */
-hr {
+.hr_ {
     border: 0;
     height: 1px;
     background: rgba(0,0,0,.15);
