--- a/scss/partials/_structure.scss
+++ b/scss/partials/_structure.scss
@@ -9,7 +9,7 @@
     h1 {
         font-size: 1.5em;
         font-family: $headingfont-family;
-        margin: .5em 0 0 0; /*to adjust baseline*/
+        margin: .5em 0 0 0; /*to adjust baseline with nav text*/
     }
 
     a{
@@ -40,7 +40,7 @@
 
 .hero {
     background-color: $color-accent;
-   opacity: .3;
+    opacity: .3;
     padding: 6em 1em;
     text-align: center;
 
