--- a/scss/partials/_typography.scss
+++ b/scss/partials/_typography.scss
@@ -42,8 +42,53 @@ a:hover {color: $color-dark-links;}
     border: 0;
     height: 1px;
     background: rgba(0,0,0,.15);
-    margin: 3em 0;
+    margin: 4em 0;
 }
+
+/* Helper */
+.sectionhead {   
+    font-family: $bodyfont-family;
+    text-align: center;
+    font-size: 1em;
+    line-height: 1;
+    text-transform: uppercase;
+    letter-spacing: .2em;
+    margin-bottom: 1em;
+}
+
+.meta {
+    display: block;
+    font-size: .8em;
+    color: $color-midgrey;
+    margin: 0 0 2em 0;
+}
+
+._line h3 {
+    text-align: center; 
+}
+
+  ._line:after {
+    content: "";
+    border-bottom: 2px solid #ccc;
+    display: block;
+    width: 100px;
+    margin: 0 auto;
+    margin-bottom: 3em;} //small
+// 
+// @media (min-width: $breakpoint-large) {
+// ._line h3 {
+//     text-align: center; }
+
+//   ._line:after {
+//     content: "";
+//     border-bottom: 4px solid rgb(194, 128, 30);
+//     display: block;
+//     width: 100px;
+//     display: flex;
+
+//     max-width: 100%; 
+// }
+// }
 
 /* TYPE SPECIMEN */
 .mainhead {
@@ -57,3 +102,4 @@ a:hover {color: $color-dark-links;}
     color: $color-midgrey;
     margin-bottom: 1em;
 }
+
