--- a/css/style.css
+++ b/css/style.css
@@ -68,15 +68,13 @@ a:hover {
   color: rgba(0, 0, 0, 0.5);
   margin: 0 0 2em 0; }
 
-._line h3 {
-  text-align: center; }
-
-._line:after {
+.sectionhead:after {
   content: "";
   border-bottom: 2px solid #ccc;
   display: block;
   width: 100px;
   margin: 0 auto;
+  margin-top: 1em;
   margin-bottom: 3em; }
 
 /* TYPE SPECIMEN */
@@ -162,8 +160,24 @@ body {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
     margin-left: -1%;
     margin-right: -1%; }
+  .swap {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse; }
+  .center {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
   .column {
     -webkit-box-flex: 1;
     -ms-flex-positive: 1;
